<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="" >
        <menu>
            <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_notes_fragment"
                android:title="@string/notes" />

            <item
                android:id="@+id/nav_reminder"
                android:icon="@drawable/ic_reminder_24dp"
                android:title="@string/reminder" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_archive"
        android:icon="@drawable/ic_archive_24dp"
        android:title="@string/archive" />

    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_trash_icon"
        android:title="@string/trash" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_fragment"
        android:title="@string/settings" />

</menu>