<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_menu"
        android:title="@string/edit"
        android:contentDescription="@string/content_description_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/view_menu"
        android:title="@string/view"
        android:contentDescription="@string/content_description_view"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/simple_list"
                android:title="@string/simple_list"
                android:checkable="true"/>
            <item
                android:id="@+id/list"
                android:title="@string/list"
                android:checkable="true"/>
            <item
                android:id="@+id/grid"
                android:title="@string/grid"
                android:checkable="true"/>
        </menu>

    </item>

    <item
        android:id="@+id/sort_menu"
        android:title="@string/sort"
        android:contentDescription="@string/content_description_sort"
        app:showAsAction="never" />


</menu>