<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_notes" >

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.odesa.notify.ui.notesFragment.NotesFragment"
        android:label="@string/notes" >
        <action
            android:id="@+id/action_nav_notes_to_nav_add_edit_note"
            app:destination="@id/nav_add_edit_note" />
        <action
            android:id="@+id/action_nav_notes_to_nav_task"
            app:destination="@id/nav_tasks" />
        <action
            android:id="@+id/action_nav_notes_to_nav_search"
            app:destination="@id/nav_search" />

        <argument
            android:name="taskId"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.odesa.notify.ui.remindersFragment.RemindersFragment"
        android:label="@string/reminder" >
        <action
            android:id="@+id/action_nav_reminder_to_nav_task"
            app:destination="@id/nav_tasks" />
        <action
            android:id="@+id/action_nav_reminder_to_nav_add_edit_note"
            app:destination="@id/nav_add_edit_note" />
        <action
            android:id="@+id/action_nav_reminder_to_nav_search"
            app:destination="@id/nav_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_archive"
        android:name="com.odesa.notify.ui.archiveFragment.ArchiveFragment"
        android:label="@string/archive" >
        <action
            android:id="@+id/action_nav_archive_to_nav_search"
            app:destination="@id/nav_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.odesa.notify.ui.trashFragment.TrashFragment"
        android:label="@string/trash" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.odesa.notify.ui.settingsFragment.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/nav_add_edit_note"
        android:name="com.odesa.notify.ui.addEditNoteFragment.AddEditNoteFragment"
        android:label="@string/add_edit_note" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.odesa.notify.ui.taskFragment.TaskFragment"
        android:label="@string/task" >

        <argument
            android:name="taskId"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.odesa.notify.ui.searchFragment.SearchFragment"
        android:label="@string/search" />

</navigation>