<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/empty_trash_menu"
        android:title="@string/empty_trash"
        android:contentDescription="@string/empty_trash"
        android:visible="false" />

</menu>