...
    <string name="todo">ToDo</string>
    <string name="content_description_todo">Todo Icon</string>
    <string name="microphone">Microphone</string>
    <string name="content_description_microphone">Microphone Icon</string>
    <string name="insert_photo">Insert Photo</string>
    <string name="content_description_insert_photo">Insert Photo Icon</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search Icon</string>
    <string name="edit">Edit</string>
    <string name="content_description_edit">Edit Menu</string>
    <string name="view">View</string>
    <string name="content_description_view">View Menu</string>
    <string name="sort">Sort</string>
    <string name="content_description_sort">Sort Menu</string>
    <string name="add_note_fab">Add Note Floating Action Button</string>
    <string name="notes">Notes</string>
    <string name="reminder">Reminder</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="simple_list">Simple List</string>
...
